deploy/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-infra

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-v1
  namespace: test-infra
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx-v1
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
  namespace: test-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-v1
  template:
    metadata:
      labels:
        app: nginx-v1
    spec:
      containers:
        - name: nginx-v1
          image: nginx:latest
          ports:
            - containerPort: 8080
