deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datasynchro-app
  namespace: datasynchro-app
spec:
  selector:
    app: datasynchro-app
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
